logs/dbmake.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/dbmake'...
Compiling './lib/python3.5/site-packages/dbmake/commands.py'...
***   File "./lib/python3.5/site-packages/dbmake/commands.py", line 75
    print "Failed to connect to a database server with specified parameters."
                                                                            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/dbmake/database.py'...
***   File "./lib/python3.5/site-packages/dbmake/database.py", line 44
    print "Create config file... ",
                                 ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/dbmake/db_tasks.py'...
***   File "./lib/python3.5/site-packages/dbmake/db_tasks.py", line 109
    print "PgDbInit START"
                         ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/dbmake/dbmake.py'...
***   File "./lib/python3.5/site-packages/dbmake/dbmake.py", line 34
    print "Error! No such a command %s" % command_name
                                      ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/dbmake/dbmake_cli.py'...
***   File "./lib/python3.5/site-packages/dbmake/dbmake_cli.py", line 103
    print """
    dbmake - Database Schema Migration Tool

    usage: dbmake <command> [options]
       or: dbmake (-h | --help) [<command name>]
       or: dbmake (-v | --version)

    Commands:
         init               Add new database connection details and initialize migrations subsystem.
         status             Show database(s) schema revisions.
         migrate            Update database(s) structure using migration files
         rollback           Roll back database(s) schema(s) to a previous revision. (same as: migrate --down 1)
         forget             Drop migrations table in database and remove its connection details from connections list.
         create             Create a new empty database and initializes migrations subsystem in it.
         new-migration      Create a new migration file
         doc-generate       Generate a database documentation
    """
             
                                           

                                     
                                                
                                  

             
                                                                                                    
                                                              
                                                                              
                                                                                                               
                                                                                                                      
                                                                                                   
                                                       
                                                             
      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/dbmake/migrations.py'...
***   File "./lib/python3.5/site-packages/dbmake/migrations.py", line 233
    print "Migrating up to revision: 0...",
                                         ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/dbmake-0.1.3.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/psycopg2'...
Listing './lib/python3.5/site-packages/psycopg2/.libs'...
Listing './lib/python3.5/site-packages/psycopg2/tests'...
Listing './lib/python3.5/site-packages/psycopg2-2.7.3.2.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/test'...
Listing './share'...
Listing './share/python-wheels'...
